[gd_scene load_steps=5 format=3 uid="uid://bag2lo7cy3w2r"]

[ext_resource type="Script" uid="uid://cyg08u4fqm6xi" path="res://movie_details.gd" id="1_8ekfd"]
[ext_resource type="FontFile" uid="uid://bwmqlpbgmkdls" path="res://Stengazeta-Regular_5.ttf" id="2_1c1bc"]
[ext_resource type="Texture2D" uid="uid://baw2lvkunlc47" path="res://assets/Garden cozy icons pack/Assets/Clen booton/C_X.png" id="2_5kc4u"]
[ext_resource type="Texture2D" uid="uid://h8sd5vsoat7k" path="res://assets/Garden cozy icons pack/Assets/Clen boton pressed/CP_X.png" id="3_1c1bc"]

[node name="MovieDetails" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ekfd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(1, 0.968627, 0.894118, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 20

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PremiereLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DurationLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GenresLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RatingKPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RatingIMDBLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.454902, 0.333333, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_1c1bc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
texture_normal = ExtResource("2_5kc4u")
texture_pressed = ExtResource("3_1c1bc")
stretch_mode = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
